<resources>
  <string name="app_name">FashionApp</string>

  <string name="title_activity_main">MainActivity</string>
  <string name="user_name">Username</string>
  <string name="password">Password</string>
  <string name="longin_txt">Login</string>
  <string name="register_txt">Register</string>
  <string name="email_txt">E-mail</string>
  <string name="forgot_pswd_txt">
    <u>Forgot my password</u>
  </string>
  <string name="settings">Settings</string>
  <string name="notifications_txt">Notifications</string>
  <string name="change_user_name">Change username</string>
  <string name="change_email">Change E-mail</string>
  <string name="delete_data">Delete data</string>
  <string name="delete_account">Delete account</string>
  <string name="change_email_dialog_title">Change E-Mail?</string>
  <string name="delete_data_dialog_title">Delete Data?</string>
  <string name="delete_account_dialog_title">Delete Account?</string>
  <string name="change_email_dialog_content">Do you want to change your E-mail?</string>
  <string name="delete_data_dialog_content">Do you want to delete all data?</string>
  <string name="delete_account_dialog_content">Do you want to delete this account?</string>
  <string name="forgot_password_dialog_title">Forgot Password?</string>
  <string name="forgot_password_dialog_content">Do you want to receive a new password?</string>
  <string name="dialog_positive">Yes</string>
  <string name="dialog_negative">No</string>
  <string name="change_email_input_hint">abc@example.com</string>
  <string name="change_email_input_prefill">abc@example.com</string>
  <string name="choose_pieces">"Choose pieces"</string>
  <!-- Login -->
  <string name="title_activity_login">Login</string>
  <!-- Wardrobe -->
  <string name="title_activity_wardrobe">My Wardrobe</string>
  <string name="drawer_open">Open Menu</string>
  <string name="drawer_close">Close Menu</string>

  <!-- Settings -->
  <string name="title_activity_settings">Settings</string>

  <!-- New Piece -->
  <string name="title_activity_create_piece">New Piece</string>

  <!-- New Outfit -->
  <string name="title_activity_create_outfit">New Outfit</string>

  <!-- Detail -->
  <string name="title_activity_piece_detail">PieceDetailActivity</string>
  <string name="title_activity_outfit_detail">OutfitDetailActivity</string>

  <!-- Help -->
  <string name="title_activity_help">Help</string>
  <string name="help_description">In this application you can add and edit your pieces in your digital wardrobe. This way you can create outfits from your pieces and also share them with others.</string>
  <string name="help_description_tutorial">Watch the Video Tutorial for more details:</string>
  <string name="help_video_url">https://www.dropbox.com/s/rbaqfqadz2bk9ba/Video_Tutorial.avi?dl=0</string>

  <!-- Edit -->
  <string name="edit_piece_title">Name your new Piece</string>
  <string name="edit_piece_pick_color">Select a Color</string>
    <string name="title_activity_pick_outfit_pieces">Pick Pieces</string>
    <string name="outfit_name_hint">Name your new Outfit</string>
    <string name="title_activity_imprint">Imprint</string>

  <string name="share_piece_txt">Look at the new piece of clothing I just added to my wardrobe. Try it out now in the FashionApp www.fashionapp.ninja</string>
  <string name="share_outfit_txt">Look at the new outfit I just added to my wardrobe. Try it out now in the FashionApp www.fashionapp.ninja</string>
</resources>
