<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cb_ic_no_data_found"/>

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/longin_txt"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_txt"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>