<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_pink_600">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_txt"
            android:textSize="24sp"
            android:textColor="@color/md_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="160dp"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/change_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user_name"
            android:textSize="24sp"
            android:textColor="@color/md_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="100dp"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="24sp"
            android:textColor="@color/md_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="100dp"/>
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_data"
            android:textSize="24sp"
            android:textColor="@color/md_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="170dp"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textSize="24sp"
            android:textColor="@color/md_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="130dp"/>
    </TableRow>


</LinearLayout>